# pypilot-cpp

./: .gitmodules  .tmp-gitlink-parent  .tmp-nmea-gitlink  .tmp-nmea-layout-gitlink  .tmp-runtime-ci-gitlink  .tmp-runtime-gitlink-sync  CMakeLists.txt  NOTES.md  README.md  SUBMODULES.md  TODO.md  library.properties
.github/workflows/: ci.yml  release-all-from-issue.yml  release-all.yml
linux/: pypilot_linux_servo_backend.hpp  pypilot_linux_servo_discovery.hpp  pypilotd.cpp  pypilotd_servo_config.hpp
mcu/atomS3R/: pypilot.ino
mcu/pypilot-atomS3R/: pypilot-atomS3R.ino
modules/: README.md
modules/pypilot-data-model/: .gitkeep
scripts/: bootstrap-modules.sh  build-arduino-all.sh  build-linux-all.sh  check-submodules.sh  run-linux-integration-tests.sh  update-submodules-to-main.sh
src/: pypilot_app.cpp  pypilot_app.hpp  pypilot_servo_backend.hpp  pypilot_servo_discovery.hpp
tests/: test_app_event_driven_input_service.cpp
tests/integration/: test_pypilotd_runtime_tcp.py
